# castfit

./: .coveragerc  .cspell.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  codeql-analysis.yml  pypi.yaml
docs/: index.html
examples/: cli_args.py  custom.py  nested.py
src/castfit/: __init__.py
test/: test_is_subtype.py  test_is_type.py  test_to_type.py  test_util.py
